--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IDCRYPT EPUB → PDF Converter</title>
   <link rel="stylesheet" href="style.css">
+
+  <!-- Tambahkan baris ini -->
+  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+
+  <!-- Lalu baru panggil yang lain -->
   <script src="libs/epub.min.js"></script>
   <script src="libs/jspdf.umd.min.js"></script>
 </head>
