--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <title>IDCRYPT EPUB → PDF Converter</title>
   <link rel="stylesheet" href="style.css">
 
-  <!-- Tambahkan baris ini -->
-  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
-
-  <!-- Lalu baru panggil yang lain -->
+  <!-- Urutan penting! -->
+  <script src="libs/jszip.min.js"></script>
   <script src="libs/epub.min.js"></script>
   <script src="libs/jspdf.umd.min.js"></script>
 </head>
