--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p id="progressText" style="font-size:14px;color:#444;margin:8px 0 0 0;">Waiting...</p>
 
     <!-- Hidden EPUB render viewer -->
-    <div id="viewer"
+<div id="viewer"
      style="position:fixed;
             left:50%;
             top:50%;
@@ -40,8 +40,10 @@
             background:#fff;
             overflow:auto;
             opacity:0.01;
+            pointer-events:none;
             z-index:9999;">
 </div>
+
 
 
     <div id="preview" class="preview"></div>
