--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <title>IDCRYPT EPUB → PDF Converter</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Library JS offline, defer supaya DOM siap -->
-  <script src="js/jszip.min.js" defer></script>
+  <!-- Library JS dengan defer supaya DOM siap -->
   <script src="js/epub.min.js" defer></script>
   <script src="js/html2canvas.min.js" defer></script>
   <script src="js/jspdf.umd.min.js" defer></script>
+  <script src="js/jszip.min.js" defer></script>
   <script src="js/converter.js" defer></script>
 </head>
 <body>
