--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>IDCRYPT EPUB → PDF Converter</title>
   <link rel="stylesheet" href="style.css">
 
-  <!-- Library JS dengan urutan benar -->
+  <!-- Library JS dengan defer supaya DOM siap -->
   <script src="js/jszip.min.js" defer></script>
   <script src="js/epub.min.js" defer></script>
   <script src="js/html2canvas.min.js" defer></script>
