--- a/index.html
+++ b/index.html
@@ -4,19 +4,14 @@
   <meta charset="UTF-8">
   <title>IDCRYPT EPUB → PDF Converter</title>
   <link rel="stylesheet" href="style.css">
-
-  <!-- Libs -->
-  <script src="js/jszip.min.js" defer></script>
-  <script src="js/epub.min.js" defer></script>
-  <script src="js/html2canvas.min.js" defer></script>
-  <script src="js/jspdf.umd.min.js" defer></script>
-
-  <!-- Modules -->
-  <script type="module" src="js/converter.js" defer></script>
+  <script src="js/jszip.min.js"></script>
+  <script src="js/epub.min.js"></script>
+  <script src="js/html2canvas.min.js"></script>
+  <script src="js/jspdf.umd.min.js"></script>
 </head>
 <body>
   <div class="container">
-    <h1>📘 IDCRYPT EPUB → PDF Converter</h1>
+    <h1>IDCRYPT EPUB → PDF Converter</h1>
 
     <div class="controls">
       <input type="file" id="epubInput" accept=".epub">
@@ -31,5 +26,28 @@
     <div id="status"></div>
     <div id="viewer" class="viewer"></div>
   </div>
+
+  <script type="module">
+    import { loadEpub } from './js/reader.js';
+    import './js/converter.js';
+
+    const epubInput = document.getElementById("epubInput");
+    const statusDiv = document.getElementById("status");
+    const convertBtn = document.getElementById("convertBtn");
+    const viewer = document.getElementById("viewer");
+
+    epubInput.addEventListener("change", e => {
+      const file = e.target.files[0];
+      if (!file) return;
+      statusDiv.innerHTML = `<p>Loading <strong>${file.name}</strong>...</p>`;
+      loadEpub(file, viewer,
+        () => {
+          convertBtn.disabled = false;
+          statusDiv.innerHTML = `<p style="color:green;">✅ EPUB loaded successfully!</p>`;
+        },
+        err => statusDiv.innerHTML = `<p style="color:red;">Error: ${err.message}</p>`
+      );
+    });
+  </script>
 </body>
 </html>
