--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
   <title>IDCRYPT EPUB → PDF Converter</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="stylesheet" href="style.css" />
+  <!-- lokal libs (pastikan file ada di js/) -->
   <script src="js/jszip.min.js" defer></script>
   <script src="js/epub.min.js" defer></script>
   <script src="js/html2canvas.min.js" defer></script>
   <script src="js/jspdf.umd.min.js" defer></script>
+
+  <!-- app scripts -->
+  <script src="js/utils.js" defer></script>
   <script src="js/reader.js" defer></script>
   <script src="js/converter.js" defer></script>
 </head>
@@ -16,21 +21,19 @@
     <h1>📘 IDCRYPT EPUB → PDF Converter</h1>
 
     <div class="controls">
-      <input type="file" id="epubInput" accept=".epub">
+      <input id="epubFile" type="file" accept=".epub" />
       <button id="convertBtn" disabled>Convert to PDF</button>
     </div>
 
     <div class="progress-container">
       <progress id="progress" value="0" max="100"></progress>
-      <span id="progressText">Waiting...</span>
+      <div id="progressText">Waiting for file...</div>
     </div>
 
     <div id="status"></div>
 
-    <!-- EPUB viewer -->
     <div id="viewer" class="viewer"></div>
 
-    <!-- Optional navigation for preview -->
     <div class="nav">
       <button id="prevPage">◀ Prev</button>
       <button id="nextPage">Next ▶</button>
