--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="controls">
     <input type="file" id="epubInput" accept=".epub" />
-    <button id="convertBtn">Convert to PDF</button>
+    <button id="convertBtn" disabled>Convert to PDF</button>
   </div>
 
   <div id="status">📖 Waiting for EPUB file...</div>
