--- a/index.html
+++ b/index.html
@@ -3,46 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IDCRYPT EPUB → PDF Converter</title>
+  <title>IDCRYPT EPUB → PDF Converter (A4 Margin Optimized)</title>
+
   <link rel="stylesheet" href="style.css">
 
-  <!-- ===== JS Libraries ===== -->
-  <script src="js/jszip.min.js" defer></script>
-  <script src="js/epub.min.js" defer></script>
-  <script src="js/html2canvas.min.js" defer></script>
-  <script src="js/jspdf.umd.min.js" defer></script>
-
-  <!-- ===== App Scripts (Order Matters) ===== -->
-  <script src="js/utils.js" defer></script>
-  <script src="js/reader.js" defer></script>
-  <script src="js/converter.js" defer></script>
+  <!-- ===== Library Core ===== -->
+  <script src="js/jszip.min.js"></script>
+  <script src="js/epub.min.js"></script>
+  <script src="js/html2canvas.min.js"></script>
+  <script src="js/jspdf.umd.min.js"></script>
 </head>
-
 <body>
   <div class="container">
-    <header>
-      <h1>📚 IDCRYPT EPUB → PDF Converter</h1>
-      <p class="subtitle">Render & convert your EPUB books into printable PDFs — beautifully.</p>
-    </header>
+    <h1>📘 IDCRYPT EPUB → PDF Converter</h1>
+    <p class="subtitle">Convert your EPUB files into clean, A4-sized PDFs with margins.</p>
 
-    <section class="controls">
-      <label for="epubInput" class="file-label">Select EPUB File:</label>
+    <div class="controls">
       <input type="file" id="epubInput" accept=".epub">
       <button id="convertBtn" disabled>Convert to PDF</button>
-    </section>
+    </div>
 
-    <section class="progress-section">
+    <div class="progress-container">
       <progress id="progress" value="0" max="100"></progress>
-      <span id="progressText">Waiting for file...</span>
-    </section>
+      <span id="progressText">Waiting for EPUB...</span>
+    </div>
 
-    <div id="status" class="status-box">No file loaded yet.</div>
+    <div id="status"></div>
 
-    <section id="viewer" class="viewer"></section>
-
-    <footer>
-      <p>⚡ Powered by <strong>IDCRYPT</strong> — Web3 Open Publishing Initiative.</p>
-    </footer>
+    <div id="viewer" class="viewer">
+      <p style="text-align:center;color:#888;">EPUB preview will appear here after loading...</p>
+    </div>
   </div>
+
+  <!-- ===== Script Modules ===== -->
+  <script src="js/utils.js"></script>
+  <script src="js/reader.js"></script>
+  <script src="js/converter_margin.js"></script>
 </body>
 </html>
