--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
   <!-- ===== Script Modules ===== -->
   <script src="js/utils.js"></script>
   <script src="js/reader.js"></script>
-  <script src="js/converter_margin.js"></script>
+  <script src="js/converter.js"></script>
 </body>
 </html>
