--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IDCRYPT EPUB → PDF Converter (A4 Margin Optimized)</title>
-
+  <title>IDCRYPT EPUB → PDF Converter (Full Render Edition)</title>
   <link rel="stylesheet" href="style.css">
 
-  <!-- ===== Library Core ===== -->
+  <!-- ===== Libraries ===== -->
   <script src="js/jszip.min.js"></script>
   <script src="js/epub.min.js"></script>
   <script src="js/html2canvas.min.js"></script>
   <script src="js/jspdf.umd.min.js"></script>
 </head>
+
 <body>
   <div class="container">
     <h1>📘 IDCRYPT EPUB → PDF Converter</h1>
-    <p class="subtitle">Convert your EPUB files into clean, A4-sized PDFs with margins.</p>
+    <p class="subtitle">Convert and preserve layout with full-page rendering.</p>
 
     <div class="controls">
       <input type="file" id="epubInput" accept=".epub">
@@ -31,11 +31,11 @@
     <div id="status"></div>
 
     <div id="viewer" class="viewer">
-      <p style="text-align:center;color:#888;">EPUB preview will appear here after loading...</p>
+      <p style="text-align:center;color:#888;">EPUB preview will appear here...</p>
     </div>
   </div>
 
-  <!-- ===== Script Modules ===== -->
+  <!-- ===== App Logic ===== -->
   <script src="js/utils.js"></script>
   <script src="js/reader.js"></script>
   <script src="js/converter.js"></script>
